Easy upload bug bash (#394)
* Update frictionless-quick-action.js

* attempt to implement qr code refresh

* add sdk hook

* Squashed commit of the following:

commit 0b01a11670598340c74e5fd6d1363aaa2ff7548a
Author: Eric Chen <159481679+echen-adobe@users.noreply.github.com>
Date:   Mon Apr 20 11:52:16 2026 -0500

    refactor

* debug logging for issue #14

* Revert "debug logging for issue #14"

This reverts commit 841a4c00339b23a5b373aec7d2c61c63c2205239.

* ...

* Update easy-upload.js

* ...

* ...

* Update frictionless-quick-action.js

* Update easy-upload.test.js

* Update easy-upload.js

* test update and placeholder update

* Experimental

* Revert "Experimental"

This reverts commit c4f93d02cc98d7405db687d83f5c3c94fbd75600.

* Update frictionless-quick-action.js

* Update frictionless-utils.js

* Update easy-upload.js

* Update frictionless-quick-action.js

* Update frictionless-quick-action.js

* edit image variant

* guest upload

* Revert "guest upload"

This reverts commit a33988d825b36aa49b70e8926fb6008c7eab2cb3.

* normalized quick action

* attempt to fix the edit image problem

* reversion

* font size and test update

* control edge case

--- a/express/code/blocks/frictionless-quick-action/easy-upload-files/easy-upload.css
+++ b/express/code/blocks/frictionless-quick-action/easy-upload-files/easy-upload.css
@@ -27,6 +27,7 @@
     0 1px 4px 0 var(--Alias-drop-shadow-transition-color, rgba(0, 0, 0, 0.04)),
     0 2px 8px 0 var(--Alias-drop-shadow-ambient-color, rgba(0, 0, 0, 0.08));
   transition: background 0.2s ease, box-shadow 0.2s ease;
+  cursor: default;
 }
 
 .frictionless-quick-action[data-frictionlesstype$="-easy-upload-variant"] .dropzone-container:hover {
@@ -181,6 +182,7 @@ main .section .qr-code-dropzone-content .easy-upload-secondary .tooltip {
   background: var(--color-white);
   border: 2px solid #B3B3B3;
   color: var(--color-gray-800);
+  font-size: var(--body-font-size-m);
 }
 
 .easy-upload-initial .easy-upload-cta-row .button-container:last-child .button:hover,
